[package]
name = "topoi-core"
description = "Pure-Rust computational geometry engine — boolean ops, buffer, Voronoi, topology"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
